--- a/1/1.html
+++ b/1/1.html
@@ -22,10 +22,10 @@
 <script>
 "use strict"
 
-const Celsius = +prompt('Введите температуру в градусах Цельсия');
-const Farenheit = (9 / 5) * Celsius + 32;
+const temp = prompt('Введите температуру');
 
-alert('Цельсий: ' + Celsius + ', ' + 'Фаренгейт: ' + Farenheit);
+alert('Температура' + ' = ' + (temp * (9/5) + 32));
+
 </script>
 </body>
 </html>
