--- a/1/2.html
+++ b/1/2.html
@@ -14,12 +14,11 @@
 Вывести значение переменной admin в консоль.
 -->
 <script>
-  "use strict";
+"use strict"
 
-  let name = 'Елизавета';
-  const admin = name;
-
-  console.log(admin);
+let name = 'Лиза';
+const admin = name; 
+console.log(admin);
 </script>
 </body>
 </html>
