--- a/1/3.html
+++ b/1/3.html
@@ -28,42 +28,13 @@
 console.log(3 - 4 * 2);
 -->
 <script>
-  "use strict";
+"use strict";
 
-  /*
-  1. 10 + 10 = 20
-  2. 20 + "10", типы данных разные, поэтому в результате получим "2010"
-  3. console.log выводит "2010" в консоль
-  */
-  console.log(10 + 10 + "10");
-  
-  /*
-  1. 10 + "10", в результате получим "1010" и это будет строковым элементом
-  2. "1010" + 10, в результате получим "101010" и это тоже будет строковым элементом
-  3. console.log выводит "101010" в консоль
-  */
-  console.log(10 + "10" + 10);
-
-  /*
-  1. 10 ++ "10", выполняется первым и меняет строковый "10" на число 10, больше приоритет у ++, чем у +, в результате получим 20
-  2. 10 + 20, в результате получим 30
-  3. console.log выводит 30 в консоль
-  */
-  console.log(10 + 10 + +"10");
-
-  /*
-  1. -"" превращает строковый элемент в число -0
-  2. 10 / -0, в результате получим -infinity
-  3. console.log выводит -infinity в консоль
-  */
-  console.log(10 / -"");
-
-  /*
-  1. +"2,5" попытается превратить строковый элемент в число 2,5, но не сможет, т.к. в числовых элементах должна быть запятая вместо точки, получим значение NaN
-  2. 10 / NaN, в результате получим NaN
-  3. console.log выводит NaN в консоль
-  */
-  console.log(10 / +"2,5");
+console.log(10 + 10 + "10") //2010
+console.log(10 + "10" + 10) //101010
+console.log(10 + 10 + +"10") //30
+console.log(10 / -"") //-Infinity 
+console.log(10 / +"2,5") //NaN
 </script>
 </body>
 </html>
