--- a/2/1.html
+++ b/2/1.html
@@ -20,31 +20,31 @@
   let a = 1, b = 1, c, d;
 
   /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
+  2
    */
   c = ++a;
   console.log(c);
 
   /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
+  1(сначала d=b, затем b++)
    */
   d = b++;
   console.log(d);
 
   /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
+  5
    */
-  c = 2 + ++a;
+  c = 2 + ++a; 
   console.log(c);
 
   /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
+  4
    */
   d = 2 + b++;
   console.log(d);
 
-  console.log(a);
-  console.log(b);
+  console.log(a); //3
+  console.log(b); //3
 </script>
 </body>
 </html>
