--- a/2/3.html
+++ b/2/3.html
@@ -21,7 +21,16 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  const a = +prompt('');
+  const b = +prompt('');
+
+  if (a>0 && b>0) {
+    console.log(a-b);
+  } else if (a<0 && b<0) {
+    console.log(a*b);
+  } else if ((a<0 && b>0) || (a>0 && b<0)) {
+    console.log(a+b);
+  } 
 </script>
 </body>
 </html>
