--- a/2/2.html
+++ b/2/2.html
@@ -20,11 +20,8 @@
   let a = 2;
   let x = 1 + (a *= 2);
 
-  /*
-  Ваш комментарий, почему переменные `x` и `a` хранят данные значения?
-   */
-  console.log(x);
-  console.log(a);
+  console.log(x); //5
+  console.log(a); //4
 
 </script>
 </body>
