--- a/2/4.html
+++ b/2/4.html
@@ -31,7 +31,27 @@
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  function sum(a, b) {
+    return a+b;
+  }
+
+  function odd(a, b) {
+    if (a>b){
+      return a-b;
+    } else {
+      return b-a
+    }
+  }
+
+  function prod(a, b) {
+    return a*b;
+  }
+
+  function division(a, b) {
+    return a/b;
+  }
+
+  console.log(odd(-2, 3));
 </script>
 </body>
 </html>
