--- a/3/2.html
+++ b/3/2.html
@@ -39,7 +39,7 @@
     ],
   };
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  console.log(`${post.author}, ${post.comments[0].rating.dislikes}, ${post.comments[1].userId}, ${post.comments[1].text}`)
 </script>
 </body>
 </html>
