--- a/3/3.html
+++ b/3/3.html
@@ -29,7 +29,9 @@
     },
   ];
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  products.forEach(product => product.price = product.price * 0.75);
+  
+  console.log(products);
 </script>
 </body>
 </html>
