--- a/3/6.html
+++ b/3/6.html
@@ -24,8 +24,11 @@ xxxxx
 -->
 <script>
   "use strict";
-
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+  let a='x';
+  for(let i=0; i<20; i++){
+    console.log(`${a}`);
+    a = a +'x';
+  }
 </script>
 </body>
 </html>
